final without images

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,8 +1,8 @@
-li {
-    padding: 5px;
-    margin: 5px;
-    background: #faebd7;
-}
+/*li {*/
+    /*padding: 5px;*/
+    /*margin: 5px;*/
+    /*background: #faebd7;*/
+/*}*/
 
 .label {
     font-weight: bold;
